--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "WIVSW",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "yargs": "^14.2.0"
   }
 }
