--- a/agent/package.json
+++ b/agent/package.json
@@ -9,6 +9,7 @@
   "author": "WIVSW",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "yargs": "^14.2.0"
   }
