--- a/agent/package.json
+++ b/agent/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "yargs": "^14.2.0"
   }
 }
